--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Raspberry Theme",
 	"description": "Dark color theme for VS Code",
 	"version": "0.2.0",
-	"publisher": "alex-shnayder",
+	"publisher": "axtgr",
 	"engines": {
 		"vscode": "^1.15.0"
 	},
